src/style/source.css
@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');

body {
    font-family: "Lato";
    background: #1a1a1a;
    color: white;
    font-size: 2.5rem;
    margin: 0;
    overflow-x: hidden;
}

#title {
    padding: 1rem;
}

.difficulty_input {
    position: absolute;
    top: 0;
    right: 0;
    line-height: 0;
    font-size: 1rem;
}

.difficulty_button {
    font-size: 1rem;
    border-radius: 0;
}

.selected_difficulty_button,
.selected_difficulty_button:focus {
    background: rgba(50, 50, 200, 0.4);
}

.subscript {
    font-size: 0.7em;
    vertical-align: bottom;
}

#step_enteror {
    background: #2a2a2a;
    padding: 1rem;
    border-radius: 1rem;
    margin-top: 1rem;

}

.step_display {
    text-align: center;
    vertical-align: center;
    position: relative;
    padding-top: 0.4rem;
    padding-bottom: 0.4rem;

}

.step_remover {
    position: absolute;
    top: calc(50% - 1.5rem);
    right: 0;
    text-align: right;
    background: #333;
    border-radius: 0.5rem;
    box-shadow: none;
    line-height: 2rem;
    margin: auto 0;
    align-self: center;
}

.step_remover:hover {
    background: #444;
}

#app {
    margin-top: 4rem;
    display: flex;
    flex-direction: row;
    justify-content: center;
    width: 100vw;
    margin-bottom: 10rem;
}

#left {
    background: #2a2a2a;
    padding: 1rem;
    border-radius: 1rem;
    margin-right: 1rem;
    min-width: 30rem;
    align-self: flex-start;
}

#right {
    position: sticky;
    width: 28rem;
    top: 5rem;
    align-self: flex-start;
}

.cell {
    box-sizing: border-box;
    width: 5.5rem;
    text-align: center;
    margin: 0.2rem;
    letter-spacing: -0.2rem;
    padding: 0.4rem 0 0.4rem 0;
    line-height: 2.5rem;
}

.column_name {
    width: 5.5rem;
    margin: 0.2rem;
    display: inline-block;
    text-align: center;
}

.column_name_list {
    top: -0.6rem;
    position: absolute;
    font-size: 1rem;
}

#back_button {
    vertical-align: middle;
    display: inline-block;
    line-height: 0;
}

#back_arrow_button {
    display: inline-block;
    vertical-align: middle;
    height: 2rem;
    width: 2rem;
}

.matrix_table {
    width: min-content;
    display: flex;
    flex-direction: column;
    border-left: solid #ccc 0.3rem;
    border-right: solid #ccc 0.3rem;
    position: relative;
    padding: 1rem;
    justify-content: center;
    margin: 0.5rem auto 0.5rem auto;
}

.matrix_table::after,
.matrix_table::before {
    border-bottom: solid #ccc 0.3rem;
    border-top: solid #ccc 0.3rem;
    position: absolute;
    content: "";
    min-width: 1rem;
    min-height: 100%;
    display: inline-block;
    box-sizing: border-box;
    top: 0;
}

.matrix_table::after {
    right: 0;
}

.matrix_table::before {
    left: 0;
}

.matrix_row {
    display: flex;
    flex-direction: row;
}

.ratio_input,
.step_input,
.step_add,
input {
    background: #404040;
    border: none;
    border-radius: 0.3em;
    color: white;
    font-size: 2rem;
    padding: 0.4rem 0 0.4rem 0;
    outline: none;
}

.invalid_ratio {
    background: #774444 !important;
}

.ratio_input,
input {
    width: 5.5rem;
    letter-spacing: -0.1rem;
}

.step_input {
    vertical-align: sub;
    font-size: 1.4rem;
    width: 1.3rem;
    text-align: center;
    padding: 0.1rem 0 0.1rem 0;
}

.subscript {
    vertical-align: sub;
    font-size: 0.6em;

}

input:hover,
button:hover {
    background: #494949
}

input:focus,
button:focus {
    background: #585858;
}

.step_add {
    background: #444;
    color: white;
    height: 2.0rem;
    border: 0;
    vertical-align: middle;
    text-align: center;
    margin-right: 1rem;
    line-height: 0.8rem;
    width: 1.6rem;
    box-sizing: content-box;
    font-size: 2rem;
    position: relative;
    padding: 0 0.4rem 0.4rem 0.4rem;
}

.add_title {
    position: absolute;
    font-size: 0.8rem;
    bottom: 0.1rem;
    line-height: 0.6rem;
    left: 0;
    text-align: center;
    width: 100%;
    color: #ccc;
}

.add_title::first-letter {
    color: #eee;
    font-weight: bold;

}

#right .ratio_input {
    width: 4rem;
}

#nextMessage {
    vertical-align: bottom;
    line-height: 5rem;
    font-size: 2rem;
}

#sectionEnd {
    width: 100%;
    display: flex;
    margin-top: 3rem;
    justify-content: space-between;
    align-items: center;
}

.error_item {
    margin-left: 1rem;
    color: #FF5555;
}

#error {
    margin-top: 1rem;
    background: #2a2a2a;
    border-radius: 1rem;
}

button,
input {
    background: #333;
    font-size: 2rem;
    border: none;
    color: white;
    outline: none;
    padding: 0.5rem;
    border-radius: 0.5rem;
    font-family: "Lato";
}

#continueButton {
    box-shadow: 2px 2px 9px 0px rgba(20, 20, 40, 0.7);
    float: right;
    background: rgba(50, 50, 200, 1);
    border-radius: 1rem;
    padding: 1rem;
}

#continueButton:hover {
    background: rgba(60, 60, 230, 1);
}

#continueButton:focus {
    outline: #cccccc 0.3rem solid;
}

#newMatrix {
    text-align: center;
    background: #2a2a2a;
    padding: 1rem;
    border-radius: 1rem;
    font-size: 1.6rem;
    display: flex;
}

#newMatrix>table>tbody>tr>td>button {
    height: 3rem;
    font-size: 1.3rem;
}

#newMatrix table {
    margin: 0 auto;
}

#newMatrix input {
    margin-left: 1rem;
    font-size: 1.6rem;
}

#guide {
    text-align: left;
    position: fixed;
    padding: 2rem 1rem 3rem 3rem;
    top: calc(10vh - 2rem);
    left: calc(20vw - 3rem);
    width: 60vw;
    height: 80vh;
    z-index: 10;
    background: #2a2a2a;
    overflow-y: scroll;
    overflow-x: hidden;
    font-size: 1.2rem;
    border-radius: 1rem;
}

#guide::-webkit-scrollbar {
    width: 2rem;
}

#guide::-webkit-scrollbar-thumb {
    background: #555;
    border: 0.7rem solid transparent;
    border-radius: 100rem;
    padding: 1rem;
    background-clip: content-box;
}

#guide_background {
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    position: fixed;
    background: rgba(0, 0, 0, 0.4);
    z-index: 9;
}

#guide_close {
    float: right;
    height: 2rem !important;
    width: 2rem;
    margin-right: 1rem;
    line-height: 2rem;
    padding: 0;
}

#step_enteror {
    position: relative;
}

#step_enteror:after {
    position: absolute;
    font-size: 1.7rem;
    content: "A key - add\a S key - set row\a R key - row swap\a C key - col swap";
    white-space: pre;
    right: 1rem;
    bottom: 1rem;
    text-align: right;
}

#github_icon {
    position: fixed;
    bottom: 1rem;
    right: 1rem;
    height: 3rem;
}

#github_icon img {
    height: 3rem;
    width: 3rem;
    filter: invert(100%);
    line-height: 3rem;
}

